Adding login logic using google api

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,21 @@
   <title>LoginForm</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="Gaurang Deshpande">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <meta name="google-signin-client_id" content="223586481538-i4td2oobb1e3iuv3d3r4r0drcbqtrfk1.apps.googleusercontent.com">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link href="assets/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
   <app-root>Loading...</app-root>
+
+  <script src="assets/js/jquery.js"></script>
+  <script src="assets/js/popper.js"></script>
+  <script src="assets/js/bootstrap.js"></script>
+
 </body>
 </html>
