Integrated Facebook Login

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,11 @@
   <meta name="description" content="">
   <meta name="author" content="Gaurang Deshpande">
   <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="//connect.facebook.net/en_US/sdk.js"></script>
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.12.0/bootstrap-social.min.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
   <link href="assets/css/bootstrap.css" rel="stylesheet">
 </head>
